<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="baseURL">http://www.praveen.t15.org/daimler/</string>
    <string name="app_name">Daimler</string>
    <string name="login">Damiler Finance</string>
    <string name="premium">Premium</string>
    <string name="initialpayment">Initial Payment</string>
    <string name="duration">Duration  :</string>
    <string name="visit">Visit</string>
    <string name="call">Call</string>
    <string name="schedule">Schedule</string>
    <string name="noidea">No Idea?</string>
    <string name="nextpremium">Next Premium : </string>
    <string name="duedate">Due Date : </string>
    <string name="yourprogress">Your Progress : </string>
    <string name="balance">Balance Amount : </string>
    <string name="pay">Pay</string>
    <string name="renew">Renew</string>
    <string name="loginbut">Login</string>
    <string name="signup">Create Account</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_switcher">Switcher</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_insurance2">Insurance2</string>
    <string name="title_activity_insurance3">Insurance3</string>

</resources>
