<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" tools:context="com.daimler.karthi.daimler.DefaultFragment"
    android:id="@+id/defaultfragment">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/premium"
        android:id="@+id/textView"
        android:textSize="25sp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="36dp" />

    <SeekBar
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:minHeight="40dp"
        android:maxHeight="40dp"
        android:id="@+id/premiumseekBar"
        android:indeterminate="false"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="34dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="25sp"
        android:text="@string/initialpayment"
        android:id="@+id/textView2"
        android:layout_below="@+id/premiumseekBar"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="41dp" />

    <SeekBar
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:minHeight="40dp"
        android:maxHeight="40dp"
        android:id="@+id/initialpayseekBar"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/duration"
        android:textSize="25sp"
        android:id="@+id/duration"
        android:layout_below="@+id/initialpayseekBar"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="42dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text=""
        android:textSize="25sp"
        android:id="@+id/durationtext"
        android:layout_alignTop="@+id/duration"
        android:layout_centerHorizontal="true" />

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New Switch"
        android:id="@+id/switch1"
        android:layout_marginTop="55dp"
        android:layout_below="@+id/durationtext"
        android:layout_alignLeft="@+id/durationtext"
        android:layout_alignStart="@+id/durationtext" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/visit"
        android:textSize="25sp"
        android:id="@+id/visit"
        android:layout_alignBottom="@+id/switch1"
        android:layout_alignRight="@+id/textView"
        android:layout_alignEnd="@+id/textView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/call"
        android:textSize="25sp"
        android:id="@+id/call"
        android:layout_alignBottom="@+id/switch1"
        android:layout_toRightOf="@+id/durationtext"
        android:layout_toEndOf="@+id/durationtext"
        android:layout_marginLeft="46dp"
        android:layout_marginStart="46dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/schedule"
        android:id="@+id/schedule"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/visit"
        android:layout_alignStart="@+id/visit" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/noidea"
        android:id="@+id/noidea"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/call"
        android:layout_alignEnd="@+id/call" />
</RelativeLayout>
